--- a/sun/src/main/filters/application-local.properties
+++ b/sun/src/main/filters/application-local.properties
@@ -1,8 +1,6 @@
-#文件上传保存到的目录 相对于web应用根
 file.upload.dir=upload
 
 #druid datasource
-#参考 https://github.com/alibaba/druid/wiki/%E9%85%8D%E7%BD%AE_DruidDataSource%E5%8F%82%E8%80%83%E9%85%8D%E7%BD%AE
 druid.initialSize=10
 druid.minIdle=10
 druid.maxActive=50
@@ -18,6 +16,9 @@ druid.maxPoolPreparedStatementPerConnectionSize=20
 druid.filters=wall,stat
 
 #Database config
-connection.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=UTF-8
+#connection.url=jdbc:mysql://192.168.220.45:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
+#connection.username=shimao
+#connection.password=Ms33vacbRRLUJ7Mz
+connection.url=jdbc:mysql://127.0.0.1:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
 connection.username=root
-connection.password=maven
+connection.password=toor
