--- a/sun/src/main/webapp/WEB-INF/web.xml
+++ b/sun/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-      version="3.0">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0">
 
 	<!-- spring -->
 	<context-param>
@@ -70,16 +69,6 @@
 	<servlet>
 		<servlet-name>DruidStatView</servlet-name>
 		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
-		<!--配置allow和deny-->
-		<!--<init-param>-->
-			<!--<param-name>allow</param-name>-->
-			<!--<param-value>128.242.127.1/24,128.242.128.1</param-value>-->
-		<!--</init-param>-->
-		<!--<init-param>-->
-			<!--<param-name>deny</param-name>-->
-			<!--<param-value>128.242.127.4</param-value>-->
-		<!--</init-param>-->
-		<!--关闭 reset功能-->
 		<init-param>
 			<param-name>resetEnable</param-name>
 			<param-value>false</param-value>
@@ -89,4 +78,37 @@
 		<servlet-name>DruidStatView</servlet-name>
 		<url-pattern>/druid/*</url-pattern>
 	</servlet-mapping>
+
+	<!--spring-mvc-->
+	<servlet>
+		<servlet-name>appServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:spring/mvc/spring-mvc-root.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+		<async-supported>true</async-supported>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>appServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+
+	<!--session timeout-->
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
+
+	<!-- Disables Servlet Container welcome file handling. Needed for COMPATIBILITY with Servlet 3.0 and Tomcat 7.0 -->
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+
 </web-app>
