基础框架 spring ,spring-mvc,mybatis,druid

--- a/sun/src/main/webapp/WEB-INF/web.xml
+++ b/sun/src/main/webapp/WEB-INF/web.xml
@@ -73,6 +73,15 @@
 			<param-name>resetEnable</param-name>
 			<param-value>false</param-value>
 		</init-param>
+		<!--StatViewSerlvet展示出来的监控信息比较敏感，是系统运行的内部情况，如果你需要做访问控制，可以配置allow和deny这两个参数。-->
+		<init-param>
+			<param-name>allow</param-name>
+			<param-value>127.0.0.1</param-value>
+		</init-param>
+		<init-param>
+			<param-name>deny</param-name>
+			<param-value>127.0.0.1</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>DruidStatView</servlet-name>
