--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <targetProject>${basedir}/src/main/java</targetProject>
-        <druid.version>1.0.4</druid.version>
+        <druid.version>1.0.14</druid.version>
         <ehcache.version>2.6.6</ehcache.version>
-        <!--  依赖版本  -->
+        <org.slf4j-version>1.6.1</org.slf4j-version>
         <mapper.version>3.0.0</mapper.version>
         <pagehelper.version>3.7.4</pagehelper.version>
+        <java.version>1.7</java.version>
     </properties>
 
     <dependencies>
@@ -35,6 +36,25 @@
             <artifactId>hamcrest-library</artifactId>
             <version>1.3</version>
             <scope>test</scope>
+        </dependency>
+
+        <!--log-->
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-api</artifactId>-->
+            <!--<version>${org.slf4j-version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>jcl-over-slf4j</artifactId>-->
+            <!--<version>${org.slf4j-version}</version>-->
+            <!--<scope>runtime</scope>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${org.slf4j-version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -241,8 +261,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>${java-version}</source>
-                    <target>${java-version}</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
