--- a/sun/pom.xml
+++ b/sun/pom.xml
@@ -9,12 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>com.babibeng.shimao.sun</artifactId>
+    <packaging>war</packaging>
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>org.mybatis.generator</groupId>-->
-            <!--<artifactId>mybatis-generator-core</artifactId>-->
-            <!--<version>1.3.0</version>-->
-        <!--</dependency>-->
     </dependencies>
     <profiles>
         <profile>
@@ -70,8 +66,6 @@
                     </systemProperties>
                 </configuration>
             </plugin>
-
-
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
@@ -94,7 +88,14 @@
                     </dependency>
                 </dependencies>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <warName>shimao</warName>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
