--- a/sun/src/main/filters/application-local.properties
+++ b/sun/src/main/filters/application-local.properties
@@ -16,9 +16,9 @@ druid.maxPoolPreparedStatementPerConnectionSize=20
 druid.filters=wall,stat
 
 #Database config
-#connection.url=jdbc:mysql://192.168.220.45:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
-#connection.username=shimao
-#connection.password=Ms33vacbRRLUJ7Mz
-connection.url=jdbc:mysql://127.0.0.1:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
-connection.username=root
-connection.password=toor
+connection.url=jdbc:mysql://192.168.220.45:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
+connection.username=shimao
+connection.password=Ms33vacbRRLUJ7Mz
+#connection.url=jdbc:mysql://127.0.0.1:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
+#connection.username=root
+#connection.password=toor
