完善微信模块

--- a/sun/src/main/filters/application-local.properties
+++ b/sun/src/main/filters/application-local.properties
@@ -21,9 +21,9 @@ weixin.appsecret=eed28920515d9c9d879561a623137349
 weixin.token=babibeng_sun
 
 #Database config
-#connection.url=jdbc:mysql://192.168.220.45:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
-#connection.username=shimao
-#connection.password=Ms33vacbRRLUJ7Mz
-connection.url=jdbc:mysql://127.0.0.1:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
-connection.username=root
-connection.password=toor
+connection.url=jdbc:mysql://192.168.220.45:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
+connection.username=shimao
+connection.password=Ms33vacbRRLUJ7Mz
+#connection.url=jdbc:mysql://127.0.0.1:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
+#connection.username=root
+#connection.password=toor
