edit config,add pic

--- a/sun/src/main/filters/application-local.properties
+++ b/sun/src/main/filters/application-local.properties
@@ -16,11 +16,11 @@ druid.maxPoolPreparedStatementPerConnectionSize=20
 druid.filters=wall,stat
 
 #weixin config
-weixin.appID=wxded5ba7134d7afc0
-weixin.appsecret=eed28920515d9c9d879561a623137349
-weixin.token=babibeng_sun
+weixin.appID=
+weixin.appsecret=
+weixin.token=
 
 #Database config
-connection.url=jdbc:mysql://127.0.0.1:3306/dailyzhihu?useUnicode=true&amp;characterEncoding=UTF-8
+connection.url=
 connection.username=
 connection.password=
