--- a/sun/src/main/filters/application-production.properties
+++ b/sun/src/main/filters/application-production.properties
@@ -16,11 +16,11 @@ druid.maxPoolPreparedStatementPerConnectionSize=20
 druid.filters=wall,stat
 
 #weixin config
-weixin.appID=wxded5ba7134d7afc0
-weixin.appsecret=eed28920515d9c9d879561a623137349
-weixin.token=babibeng_sun
+weixin.appID=
+weixin.appsecret=
+weixin.token=
 
 #Database config
-connection.url=jdbc:mysql://192.168.220.45:3306/shimao?useUnicode=true&amp;characterEncoding=UTF-8
-connection.username=shimao
-connection.password=Ms33vacbRRLUJ7Mz
+connection.url=
+connection.username=
+connection.password=
